--- a/src/contato.html
+++ b/src/contato.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-        <h1>Contato</h1>
+        <h1 id="titulop">Contato</h1>
 
         <section id="sec_form">
             <form action="" method="post"></form>
@@ -51,7 +51,7 @@
                 <legend>Dados Pessoais</legend>
                 <p>
                     <label for="nome">Nome:</label>
-                    <input type="text" name="nome" id="nome" required>
+                    <input type="text" name="nome" id="nome"  required>
                 </p>
                 <p>
                     <label for="nome">Email:</label>
@@ -69,6 +69,7 @@
             <fieldset>
                 <legend>Mensagem</legend>
             </fieldset>
+            <button onclick="altera()">Alterar título</button>
         </section>
     </main>
 
@@ -76,7 +77,7 @@
 
     </footer>
 
-
+    <script src="./js/code.js"></script>
 </body>
 
 </html>
